@@ -1,3 +1,8 @@
+2007-05-24 20:37  nick
+
+	* panel/panel-item-manager.c, NEWS: Fix loading internal plugins 
+	if a similar file exists in the start directory (Bug #3279).
+
 2007-04-09 10:05  maximilian
 
 	* libexo/trunk/po-doc/fr.po, libexo/trunk/po/fr.po,
